[package]
name = "teco"
license = "MIT"
description = "A simple code test runner"
homepage = "https://github.com/lewohy/teco"
version = "0.1.1"
edition = "2021"

[dependencies]
bat = "0.25.0"
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.17.9"
log = "0.4.22"
spdlog-rs = "0.4.0"
