[package]
name = "teco"
license = "MIT"
description = "A simple test test runner"
homepage = "https://github.com/lewohy/teco"
version = "0.3.1"
edition = "2021"

[dependencies]
bat = { version = "0.25.0", default-features = false, features = ["regex-fancy"] }
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.17.9"
itertools = "0.14.0"
log = "0.4.22"
spdlog-rs = "0.4.0"
